bugfix elements with text not wrapping line sometimes

--- a/src/jquery.grid-composer.css
+++ b/src/jquery.grid-composer.css
@@ -67,6 +67,7 @@
 	text-align: center;
 	vertical-align: middle;
 	width: 100%;
+	word-break: break-word;
 }
 
 .gc-grid .gc-grid-item:after {
